# VERIASSET

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  deps.py  nostromo.py  rwa.py  stats.py  trade.py  users.py  websocket.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/models/: __init__.py  nostromo.py  rwa.py  trade.py  user.py
backend/app/services/: __init__.py  easyconnect.py  gemini_ai.py  nostromo.py  qubic_rpc.py
backend/contracts/: dutch_auction.qubic  rwa_token.qubic
backend/easyconnect/: blueprint.json
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_sync_models.py
backend/tests/: conftest.py  test_api.py
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/governance/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/launchpad/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/dashboard/: analytics.tsx  (+6 more)
frontend/src/hooks/: use-toast.ts  useQubic.ts  useWebSocket.ts
frontend/src/lib/: api.ts  qubic-sdk.ts  store.ts  utils.ts
(+24 files in other folders)
